--- a/index.html
+++ b/index.html
@@ -8,21 +8,15 @@
 </head>
 <body>
     <nav>
-    <!--inicio logo e icones-->
+    <!--inicio logo-->
     <div class="nav-left">
-        <h1 class="logo">MAKER</h1>
-
-        <ul>
-            <li><img src="imagens/notification.png" alt="Notificações"></li>
-            <li><img src="imagens/inbox.png" alt=""></li>
-            
-        </ul>
-
+        <h1 class="logo">Maker</h1>
     </div>
-     <!--fim logo e icones-->
+
 
      <!--inicio menu e busca-->
     <div class="nav-right">
+        
         <div class="busca">
             <img src="imagens/search.png" alt="icone de busca">
             <input type="text" name="p" id="" placeholder="Pesquisar">
@@ -31,8 +25,31 @@
         <div class="icone-usuario online">
             <img src="imagens/icone-usuario.png" alt="usuario">
         </div>
-
+        <ul>
+            <li><img src="imagens/notification.png" alt="Notificações"></li>
+            <li><img src="imagens/inbox.png" alt=""></li>
+        </ul>
     </div>
     </nav>
+    <!--CORPO-->
+    <div class="container">
+        <!--BARRA LATERAL ESQUERDA-->
+        <div class="left-sidebar">
+            <div class="links">
+                <a href="#"><img src="imagens/news.png" alt="">Notícias</a>
+                <a href="#"><img src="imagens/news.png" alt="">Programação</a>
+                <a href="#"><img src="imagens/news.png" alt="">Marketing</a>
+                <a href="#"><img src="imagens/news.png" alt="">Tendências</a>
+            </div>
+        </div>
+        <!--CONTEUDO-->
+        <div class="main-content">
+
+        </div>
+        <!-- BARRA LATERAL DIREITA -->
+        <div class="right-sidebar">
+
+        </div>
+    </div>
 </body>
 </html>
