--- a/index.html
+++ b/index.html
@@ -7,49 +7,33 @@
     <title>Maker</title>
 </head>
 <body>
-    <nav>
-    <!--inicio logo-->
-    <div class="nav-left">
-        <h1 class="logo">Maker</h1>
-    </div>
-
-
-     <!--inicio menu e busca-->
-    <div class="nav-right">
-        
-        <div class="busca">
-            <img src="imagens/search.png" alt="icone de busca">
-            <input type="text" name="p" id="" placeholder="Pesquisar">
+    <header>
+        <div class="logo">
+            <h1>Maker</h1>
         </div>
+        <div class="navbar">
+            <div class="busca">
+                <input type="text" name="" id="" placeholder="Pesquise...">
+                <img id="buscaIcon"  src="https://icons.iconarchive.com/icons/colebemis/feather/128/search-icon.png" width="24" height="24">
 
-        <div class="icone-usuario online">
-            <img src="imagens/icone-usuario.png" alt="usuario">
-        </div>
-        <ul>
-            <li><img src="imagens/notification.png" alt="Notificações"></li>
-            <li><img src="imagens/inbox.png" alt=""></li>
-        </ul>
-    </div>
-    </nav>
-    <!--CORPO-->
-    <div class="container">
-        <!--BARRA LATERAL ESQUERDA-->
-        <div class="left-sidebar">
-            <div class="links">
-                <a href="#"><img src="imagens/news.png" alt="">Notícias</a>
-                <a href="#"><img src="imagens/news.png" alt="">Programação</a>
-                <a href="#"><img src="imagens/news.png" alt="">Marketing</a>
-                <a href="#"><img src="imagens/news.png" alt="">Tendências</a>
             </div>
-        </div>
-        <!--CONTEUDO-->
-        <div class="main-content">
+            <ul>
+                <li>
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#">Perfil</a>
+                </li>
+                <li>
+                    <a href="#">Notificações</a>
+                </li>
+                <li>
+                    <a href="#">Sair</a>
+                </li>
+                
+            </ul>
 
         </div>
-        <!-- BARRA LATERAL DIREITA -->
-        <div class="right-sidebar">
-
-        </div>
-    </div>
+    </header>
 </body>
 </html>
