--- a/index.html
+++ b/index.html
@@ -4,30 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Maker</title>
 </head>
 <body>
     <header>
         <div class="logo">
+            <i class="fa-solid fa-laptop-code"></i>
             <h1>Maker</h1>
         </div>
         <div class="navbar">
             <div class="busca">
                 <input type="text" name="" id="" placeholder="Pesquise...">
-                <img id="buscaIcon"  src="https://icons.iconarchive.com/icons/colebemis/feather/128/search-icon.png" width="24" height="24">
+                <i id="buscaIcon" class="fa-solid fa-magnifying-glass"></i>
 
             </div>
             <ul>
                 <li>
+                    <i class="fa-solid fa-house" id="inicial"></i>
                     <a href="#">Home</a>
                 </li>
                 <li>
+                    <i class="fa-solid fa-user"></i>
                     <a href="#">Perfil</a>
                 </li>
                 <li>
+                    <i class="fa-solid fa-envelope"></i>
                     <a href="#">Notificações</a>
                 </li>
                 <li>
+                    <i class="fa-solid fa-arrow-right-from-bracket"></i>
                     <a href="#">Sair</a>
                 </li>
                 
