--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
     <title>Maker</title>
 </head>
 <body>
@@ -21,25 +25,36 @@
             </div>
             <ul>
                 <li>
-                    <i class="fa-solid fa-house" id="inicial"></i>
-                    <a href="#">Home</a>
-                </li>
-                <li>
                     <i class="fa-solid fa-user"></i>
-                    <a href="#">Perfil</a>
-                </li>
-                <li>
-                    <i class="fa-solid fa-envelope"></i>
-                    <a href="#">Notificações</a>
+                    <a href="#">Entrar</a>
                 </li>
                 <li>
                     <i class="fa-solid fa-arrow-right-from-bracket"></i>
                     <a href="#">Sair</a>
                 </li>
-                
             </ul>
 
         </div>
     </header>
+    <aside class="sidebar">
+        <nav>
+            <button>
+                <span>
+                    <i class="material-symbols-outlined">home</i>
+                    <span>Home</span>
+                </span>
+            </button>
+            <button>
+                <span>
+                    <i class="material-symbols-outlined">tag</i>
+                    <span>Explorar</span>
+                </span>
+            </button>
+        </nav>
+    </aside>
+
+   <main class="main">
+    <h1>Bem vindo ao site</h1>
+   </main>
 </body>
 </html>
