Atualizando erros de media query

--- a/index.html
+++ b/index.html
@@ -77,30 +77,15 @@
                 <i class="material-symbols-outlined">close</i>
             </span>
         </button>
-        <button>
-            <span>
-                <i class="fa-solid fa-house"></i>
-                <span> Home</span>
-                
-        </button>
-        <button>
-            <span>
-                <i class="fa-solid fa-chart-simple"></i>
-                <span> Tendências</span>
-            </span>
-        </button>
-        <button>
-            <span>
-                <i class="fa-solid fa-terminal"></i>
-                <span> Programação</span>
-            </span>
-        </button>
-        <button>
-            <span>
-                <i class="fa-solid fa-bullhorn"></i>
-                <span> Marketing</span>
-            </span>
-        </button>
+
+            <a href="#"><i class="fa-solid fa-house"></i><span>&nbsp;Home</span></a>
+
+            <a href="#"><i class="fa-solid fa-chart-simple"></i><span>&nbsp;Tendências</span></a>
+
+            <a href="#"><i class="fa-solid fa-terminal"></i><span>&nbsp;Programação</span></a>
+
+            <a href="#"><i class="fa-solid fa-bullhorn"></i><span>&nbsp;Marketing</span></a>   
+    </nav>
         
     </nav>
 
