--- a/login.html
+++ b/login.html
@@ -32,7 +32,9 @@
             </div>
         </div>
     </div>
-    <script src="valida.js"></script>
+    <script src="js/valida.js"></script>
+    <script src="js/cadastrar.js"></script>
+    <script src="js/script.js"></script>
     
 </body>
 </html>
