--- a/cadastro.html
+++ b/cadastro.html
@@ -39,7 +39,9 @@
                 <button onclick='cadastrar()' class="btn-login" >Cadastrar</button> 
             </div>
         </div>
-        <script src="cadastrar.js"></script>
+        <script src="js/valida.js"></script>
+        <script src="js/cadastrar.js"></script>
+        <script src="js/script.js"></script>
     
 </body>
 </html>
