--- a/cadastro.html
+++ b/cadastro.html
@@ -36,12 +36,12 @@
                     <input type="password" id="confirmSenha" placeholder="Confirme sua Senha">
                 </div>
 
-                <button onclick='cadastrar()' class="btn-login" >Cadastrar</button> 
+                <button type="button" onclick='clicando()' id="btn-cadastrando">Cadastrar</button> 
             </div>
         </div>
-        <script src="js/valida.js"></script>
-        <script src="js/cadastrar.js"></script>
-        <script src="js/script.js"></script>
+    <script src="js/cadastrar.js"> </script>
+    <script src="js/script.js"></script>
+    
     
 </body>
 </html>
