--- a/programacao.html
+++ b/programacao.html
@@ -26,7 +26,7 @@
             <ul>
                 <li>
                     <i class="fa-solid fa-user"></i>
-                    <a href="#">Entrar</a>
+                    <a href="login.html">Entrar</a>
                 </li>
                 <li>
                     <i class="fa-solid fa-arrow-right-from-bracket"></i>
