--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maker Login</title>
     <link rel="stylesheet" href="css/login.css">
+    <link rel="shortcut icon" href="imagens/favicon-32x32.png" type="image/x-icon">
 </head>
 <body>
     <div class="main-login">
