--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             <ul>
                 <li>
                     <i class="fa-solid fa-user"></i>
-                    <a href="login.html">Entrar</a>
+                    <a href="login.html" id="user-link">Entrar</a>
                 </li>
                 <li>
                     <i class="fa-solid fa-arrow-right-from-bracket"></i>
-                    <a href="#">Sair</a>
+                    <a href="#" >Sair</a>
                 </li>
             </ul>
         </div>
@@ -91,7 +91,7 @@
 
                 <div class="add-links">
                     <input type="button" value="Enviar"onclick="addPost()">
-                    <button id="clear-posts-button">Limpar Todas as Postagens</button>
+                    <button id="clear-posts-button">Excluir Posts</button>
 
                 </div>
 
