--- a/login.html
+++ b/login.html
@@ -19,16 +19,18 @@
                 <h1>ENTRAR</h1>
                 <!-- <h2>Ao continuar, você concorda com as nossas diretrizes e nossas <a href="#">Políticas de Privacidade</a></h2>-->
                 <div class="textfield">
-                    <label for="usuario">Usuario</label>
-                    <input type="text" name="usuario" onchange="validateFields()" placeholder="Escreva seu Email">
+                    <label for="loginUsuario">Usuário</label>
+                    <input type="text" id="loginUsuario" name="loginUsuario" placeholder="Escreva seu Usuário">
                 </div>
                 <div class="textfield">
-                    <label for="senha">Senha</label>
+                    <label for="loginSenha">Senha</label>
                     <i class="fa fa-eye" aria-hidden="true"></i>
-                    <input type="password" name="senha" placeholder="Escreva sua Senha">
+                    <input type="password" id="loginSenha" name="loginSenha" placeholder="Escreva sua Senha">
                 </div>
-                <button class="btn-login" type="submit">Login</button>
-                <!-- --><button class="btn-cadastrar"><a href="cadastro.html">Cadastre-se</a></button>
+                <button class="btn-login" id="btn-login" type="button" onclick="fazerLogin()">Login</button>
+                <div id="msg-LoginError" class="error-message"></div>
+                <button class="btn-cadastrar"><a href="cadastro.html">Cadastre-se</a></button>
+                
                 
             </div>
         </div>
