mudanças no index

--- a/programacao.html
+++ b/programacao.html
@@ -27,11 +27,11 @@
             <ul>
                 <li>
                     <i class="fa-solid fa-user"></i>
-                    <a href="login.html">Entrar</a>
+                    <a href="#" id="user-link">Bem-Vindo(a)</a>
                 </li>
                 <li>
                     <i class="fa-solid fa-arrow-right-from-bracket"></i>
-                    <a href="#">Sair</a>
+                    <a href="index.html">Sair</a>
                 </li>
             </ul>
         </div>
@@ -39,7 +39,7 @@
     <!-- Barra de navegação lateral -->
     <aside class="sidebar">
         <nav>
-            <a href="index.html">
+            <a href="maker.html">
                 <span>
                     <i class="fa-solid fa-house"></i>
                     <span>Home</span>
@@ -71,7 +71,7 @@
                 <i class="material-symbols-outlined">close</i>
             </span>
         </button>
-        <a href="#"><i class="fa-solid fa-house"></i><span>&nbsp;Home</span></a>
+        <a href="maker.html"><i class="fa-solid fa-house"></i><span>&nbsp;Home</span></a>
         <a href="programacao.html"><i class="fa-solid fa-terminal"></i><span>&nbsp;Programação</span></a>
         <a href="marketing.html"><i class="fa-solid fa-bullhorn"></i><span>&nbsp;Marketing</span></a>
     </nav>
@@ -81,7 +81,7 @@
             <!-- Foto do usuário -->
             <div class="user-profile">
 
-                <img id="imagem-perfil" src="imagens/Gojo-Satoru.jpg" alt="">
+                <img id="imagem-perfil" src="imagens/Premium-Vector-_-Cute-astronaut-working-as-a-programmer.jpg" alt="">
                 
             </div>
             <!-- Caixa de texto para post -->
