--- a/maker.html
+++ b/maker.html
@@ -81,7 +81,7 @@
             <!-- Foto do usuário -->
             <div class="user-profile">
 
-                <img id="imagem-perfil" src="imagens/gato-bruxo.jpg" alt="">
+                <img id="imagem-perfil" src="imagens/Gojo-Satoru.jpg" alt="">
                 
             </div>
             <!-- Caixa de texto para post -->
