--- a/cadastro.html
+++ b/cadastro.html
@@ -38,6 +38,7 @@
                 </div>
 
                 <button type="button" onclick='clicando()' id="btn-cadastrando">Cadastrar</button> 
+                <button class="btn-cadastrar"><a href="index.html">Retornar</a></button>
             </div>
         </div>
     <script src="js/cadastrar.js"> </script>
